# C-exercise02

./: CMakeLists.txt  main.c
